--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css?family=Merriweather:100,200,300,300i,400,400i,700");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400");
+
+body {
+	font-family: "Open Sans", serif;
+	height: 100vh;
+	width: 100vw;
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.contenedor-principal {
+	height: 100vh;
+	background-size: cover;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	color: #000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.contenedor-datos {
+	background-color: #2c3e50;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.contenedor_datos__info {
+	width: 60%;
+	font-size: 20px;
+	font-weight: 200;
+	letter-spacing: 2px;
 }
 
-.App-link {
-  color: #61dafb;
+.datos__titulo {
+	color: #f16051;
+	border-bottom: solid 2px rgba(255, 255, 255, 0.06);
+	padding: 20px 0 20px 0;
+	font-weight: 400;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.datos__valor {
+	color: #fff;
+	font-weight: 200;
+}
+
+@media (max-width: 765px) {
+	body {
+		width: 97vw;
+	}
+	.contenedor-principal {
+		height: 45vh;
+	}
+
+	.contenedor-datos {
+		height: 60vh;
+	}
+	.contenedor_datos__info {
+		width: 80vw;
+		font-size: 15px;
+		font-weight: 50;
+	}
+
+	.datos__titulo {
+		padding: 10px 0 10px 0;
+		font-weight: 40;
+	}
+	.datos__valor {
+		font-weight: 40;
+	}
 }
