--- a/src/App.css
+++ b/src/App.css
@@ -51,11 +51,11 @@ body {
 		width: 97vw;
 	}
 	.contenedor-principal {
-		height: 40%;
+		height: 40vh;
 	}
 
 	.contenedor-datos {
-		height: 60%;
+		height: 60vh;
 	}
 	.contenedor_datos__info {
 		width: 80vw;
