--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ body {
 	font-weight: 200;
 }
 
-@media (max-width: 765px) {
+@media (max-width: 765px) and (orientation: landscape) {
 	body {
 		width: 97vw;
 	}
