--- a/src/components/estilos.form.css
+++ b/src/components/estilos.form.css
@@ -56,7 +56,7 @@ button:active {
 	outline: none;
 }
 
-@media (max-width: 765px) and (orientation: landscape) {
+@media (max-width: 765px){
 	.contenedor__titulo {
 		font-size: 15px;
 		letter-spacing: 1px;
@@ -78,3 +78,4 @@ button:active {
 		font-size: 15px;
 	}
 }
+
