--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ body {
 	}
 }
 
-@media (min-width:350px)and(orientation: landscape){
+@media (max-width:350px)and(orientation: landscape){
 body {
 		width: 100vw;
 height:300vh;
